<resources>
    <string name="app_name">BlaBlaWild</string>
    <string name="action_settings">Settings</string>
    <string name="search_text">Rechercher</string>
    <string name="RechercherBouton">Rechercher</string>
    <string name="départ">Départ</string>
    <string name="Arrivée">Arrivée</string>
    <string name="Date">Rechercher</string>
    <string name="BoutonHome">Rechercher Trajet</string>
    <string name="Toast">Veuillez renseigner les champs demandés !</string>
    <string name="Toast2">Bravo ton départ est fixé pour le </string>
    <string name="Menu">Résultats</string>
    <string name="title_activity_submit_itinerary">SubmitItineraryActivity</string>
    <string name="hintDepart">Depart</string>
    <string name="hintArrivée">Arrivée</string>
    <string name="hintdate">Date</string>
    <string name="hintprix">Prix</string>
    <string name="hintnom">Nom</string>
    <string name="hintprénom">Prénom</string>
    <string name="Drivername">Bernard</string>
    <string name="Driversurname">Tapis</string>
    <string name="searchButton">Search</string>
    <string name="submit">Submit</string>
    <string name="auth_failed">Fail</string>
    <string name="emailpassword_status_fmt">L\'user n\'est pas null !</string>
    <string name="depart">depart</string>
    <string name="destination">destination</string>
    <string name="prix">prix</string>
    <string name="date">date</string>
    <string name="valider">valider</string>

</resources>

