<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_submit_itinerary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mathieu.blablawild.SubmitItineraryActivity"
    tools:showIn="@layout/activity_submit_itinerary">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/départ"
        android:ems="10"
        android:id="@+id/etDépart"
        />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hintprix"
        android:ems="10"
        android:id="@+id/etPrice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="187dp"
        android:layout_marginStart="187dp" />

    <Button
        android:text="@string/BoutonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonYolo"
        android:layout_marginBottom="17dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/hintdate"
        android:ems="10"
        android:id="@+id/etDate"
        android:layout_below="@+id/etArrivée"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/Arrivée"
        android:ems="10"
        android:id="@+id/etArrivée"
        android:layout_below="@+id/etDépart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
